roundOverScreen cut off fixes

--- a/styles/duel.css
+++ b/styles/duel.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background: rgba(0, 0, 0, 0.9);
   z-index: 1000;
   display: flex;
