--- a/styles/gameHistory.module.css
+++ b/styles/gameHistory.module.css
@@ -276,7 +276,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   z-index: 9999;
   background: rgba(0, 0, 0, 0.9);
   opacity: 1;
